--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     },
     "config": {
         "posts_per_page": 10,
-        "image_sizes": {}
+        "image_sizes": {
+          "app": {
+            "width": 263
+          }
+        }
     }
 }
