--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "posts_per_page": 10,
         "image_sizes": {
           "app": {
-            "width": 263
+            "width": 263,
+            "height": 263
           }
         }
     }
